# py2musicxml

./: .gitignore  MEIwrite.py  README.md  XML.xml  XMLwrite.py  bangleize.py  bjorklundtest.py  fieldRule.py  fractal.xml  fractalNames.py  gui.py  note.py  noteList.py  noteListNEW.py  noteListOld.py  notePC.py  noteRhythm.py  objectTests.py  out.txt  pitchField.py  pitchMath.py  playback.py  playback2.py  pyproject.toml  score.py  score1.py  score2.py  score2.xml  setup.py  stepwise.py  stochasticGrammar.py  tied.musicxml  tonality.py
py2musicxml/: MEIwrite.py  Node.py  PhraseTree.py  RhythmTree.py  Tree.py  __init__.py  __main__.py  beat.py  bjorklund.py  hyperbeat.py  measure.py  meiwrite.py  meterNode.py  note.py  noteGrouping.py  noteList.py  notelist.py  part.py  pitchMath.py  pitch_duration.py  rest.py  score.py  utils.py
scripts/: PitchClassSet.py  __init__.py  bangleize.py  bjorklundtest.py  dict_example.py  dispersed_fractal.py  dispersed_fractal_with_instruments.py  example_chords.py  fieldRule.py  fractal.xml  fractalNames.py  frerejacques.py  gui.py  hello_world.py  name_worksheet.py  out.txt  pitchField.py  riemann.py  riemann_fractal.py  riemann_fractal_2.py  riemann_generator.py  riemann_use_case.py  riemann_with_instruments.py  scikitlearning.py  scrap.py  simple_playground.py  spectral.py  stepwise.py  stochasticGrammar.py  tonality.py  untitled.py  voice.py
tests/: new_test_score.py  test_chord.py  test_measure.py  test_measure_beaming.py  test_note.py  test_notelist.py  test_part.py  test_pcset.py  test_pitch_duration.py  test_rest.py  test_score.py  (+2 more)
(+21 files in other folders)
