[tool.poetry]
name = "py2musicxml"
version = "0.0.1"
description = "python library for prototyping compositional ideas"
authors = ["Aaron Stepp <stepp.aaron@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
lxml = "^4.6.2"
numpy = "^1.18.1"
scipy = "^1.4.1"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
ipykernel = "^5.3.4"
pytest = "*"
black = "^21.7b0"
isort = "^5.9.3"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
